--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
                     <td class='year'>(2023)</td>
                     <td>&nbsp;</td>
                     <td>
-                        Graph Theory and Complex Networks Analysis. Master in Informatics program. Austral University of Chile. <br/><a href="https://github.com/bsotomayorg/UACh-MIN-Graph_NLP">Notebooks</a> (extended material) and <a href="https://docs.google.com/presentation/d/1cw_ElREqjpKZfYk-P9QJJAdA9qtWJJkyZA2MMhv2wRA/edit?usp=sharing">slides</a>.
+                        Collab. Lecturer in Graph Theory and Complex Networks Analysis. <br/>
+                        Master in Informatics program. Austral University of Chile. <br/>
+                        &#8627; &nbsp; <a href="https://github.com/bsotomayorg/UACh-MIN-Graph_NLP">Notebooks</a> (extended material) and <a href="https://docs.google.com/presentation/d/1cw_ElREqjpKZfYk-P9QJJAdA9qtWJJkyZA2MMhv2wRA/edit?usp=sharing">slides</a>.
                     </td>
                   </tr>
                   <tr><td></td><td></td><td><p></p></td></tr>
@@ -66,14 +68,16 @@
                     <td class='year'>(2022)</td>
                     <td>&nbsp;</td>
                     <td>
-                        High-Performance Computing with Python for Scientists. Goethe Research Academy for Early Career Researchers (GRADE), Goethe University Frankfurt, Germany. <br/><a href="https://github.com/bsotomayorg/Intro_HPC_Python">Notebooks</a> (extended material).
+                        Lecturer in High-Performance Computing with Python for Scientists. <br/>
+                        Goethe Research Academy for Early Career Researchers (GRADE), Goethe University Frankfurt, Germany. <br/>
+                        &#8627; &nbsp; <a href="https://github.com/bsotomayorg/Intro_HPC_Python">Notebooks</a> (extended material).
                     </td>
                   </tr>
                   <tr><td></td><td></td><td><p></p></td></tr>
                   <tr>
                     <td class='year'>(2015-2019)</td>
                     <td>&nbsp;</td>
-                    <td>Introduction to ICT. Industrial Engineering program. Austral University of Chile. </td>
+                    <td>Lecturer in Introduction to ICT. <br/>Industrial Engineering program. Austral University of Chile. </td>
                   </tr>
                 </table>
             </div>
